Fix clipped placeholder content

--- a/app/assets/stylesheets/poc/layouts/results.scss
+++ b/app/assets/stylesheets/poc/layouts/results.scss
@@ -63,6 +63,7 @@ form {
   label {
     float: left;
     margin: 0 50px 0 0;
+    min-width: 225px;
 
     input {
       border-right: none;
